fixed task creation and refac api
